automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,9 +142,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "data": {
       "text/html": [
@@ -166,7 +178,7 @@
          "name": "f(x) = (g(x))^2",
          "text": [],
          "type": "scatter",
-         "uid": "cd8c5378-bf49-11e8-83f8-0242ac11006b",
+         "uid": "898dcf1a-c2b1-11e8-a057-0242ac110019",
          "x": [
           0,
           1,
@@ -197,7 +209,7 @@
          "name": "g(x) = .5*x + 3",
          "text": [],
          "type": "scatter",
-         "uid": "cd8c5a4e-bf49-11e8-83f8-0242ac11006b",
+         "uid": "898dd276-c2b1-11e8-a057-0242ac110019",
          "x": [
           0,
           1,
@@ -227,10 +239,10 @@
        "layout": {}
       },
       "text/html": [
-       "<div id=\"ef92c46a-02a5-4e62-88ec-8ae6eacaf061\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"ef92c46a-02a5-4e62-88ec-8ae6eacaf061\", [{\"mode\": \"lines\", \"name\": \"f(x) = (g(x))^2\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], \"y\": [3.0, 3.5, 4.0, 4.5, 5.0, 5.5, 6.0, 6.5, 7.0, 7.5], \"type\": \"scatter\", \"uid\": \"cd9a80ba-bf49-11e8-83f8-0242ac11006b\"}, {\"mode\": \"lines\", \"name\": \"g(x) = .5*x + 3\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], \"y\": [9.0, 12.25, 16.0, 20.25, 25.0, 30.25, 36.0, 42.25, 49.0, 56.25], \"type\": \"scatter\", \"uid\": \"cd9a83a8-bf49-11e8-83f8-0242ac11006b\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"2852b897-e65c-40b9-8c65-67050b35a6f6\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"2852b897-e65c-40b9-8c65-67050b35a6f6\", [{\"mode\": \"lines\", \"name\": \"f(x) = (g(x))^2\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], \"y\": [3.0, 3.5, 4.0, 4.5, 5.0, 5.5, 6.0, 6.5, 7.0, 7.5], \"type\": \"scatter\", \"uid\": \"89c061f0-c2b1-11e8-a057-0242ac110019\"}, {\"mode\": \"lines\", \"name\": \"g(x) = .5*x + 3\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], \"y\": [9.0, 12.25, 16.0, 20.25, 25.0, 30.25, 36.0, 42.25, 49.0, 56.25], \"type\": \"scatter\", \"uid\": \"89c064b6-c2b1-11e8-a057-0242ac110019\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"ef92c46a-02a5-4e62-88ec-8ae6eacaf061\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"ef92c46a-02a5-4e62-88ec-8ae6eacaf061\", [{\"mode\": \"lines\", \"name\": \"f(x) = (g(x))^2\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], \"y\": [3.0, 3.5, 4.0, 4.5, 5.0, 5.5, 6.0, 6.5, 7.0, 7.5], \"type\": \"scatter\", \"uid\": \"cd9a80ba-bf49-11e8-83f8-0242ac11006b\"}, {\"mode\": \"lines\", \"name\": \"g(x) = .5*x + 3\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], \"y\": [9.0, 12.25, 16.0, 20.25, 25.0, 30.25, 36.0, 42.25, 49.0, 56.25], \"type\": \"scatter\", \"uid\": \"cd9a83a8-bf49-11e8-83f8-0242ac11006b\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"2852b897-e65c-40b9-8c65-67050b35a6f6\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"2852b897-e65c-40b9-8c65-67050b35a6f6\", [{\"mode\": \"lines\", \"name\": \"f(x) = (g(x))^2\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], \"y\": [3.0, 3.5, 4.0, 4.5, 5.0, 5.5, 6.0, 6.5, 7.0, 7.5], \"type\": \"scatter\", \"uid\": \"89c061f0-c2b1-11e8-a057-0242ac110019\"}, {\"mode\": \"lines\", \"name\": \"g(x) = .5*x + 3\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], \"y\": [9.0, 12.25, 16.0, 20.25, 25.0, 30.25, 36.0, 42.25, 49.0, 56.25], \"type\": \"scatter\", \"uid\": \"89c064b6-c2b1-11e8-a057-0242ac110019\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
